Fixed layout problem when fullscreen by increasing margin-right for search box

--- a/tests/sass/screen.scss
+++ b/tests/sass/screen.scss
@@ -165,6 +165,7 @@ a {
             width: $banner-height * 3.75;
             height: $banner-height / 2;
             border: none;
+            margin-right: 24px;
         }
     }
     .menuitem {
